--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,17 @@
+alembic==0.6.7
+amqp==1.4.9
+aniso8601==0.90
+anyjson==0.3.3
+appdirs==1.4.3
+arrow==0.5.4
+BeautifulSoup==3.2.1
+beautifulsoup4==4.3.2
+billiard==3.3.0.23
+blinker==1.3
+celery==3.1.25
+chardet==2.3.0
+click==3.3
+decorator==3.4.0
 Flask==0.10.1
 Flask-Assets==0.10
 Flask-Cors==1.10.2
@@ -7,55 +21,43 @@ Flask-Mail==0.9.1
 Flask-Migrate==1.2.0
 Flask-Principal==0.4.0
 Flask-RESTful==0.3.1
-Flask-SQLAlchemy==2.0
 Flask-Script==2.0.5
 Flask-Security==1.7.5
+Flask-SQLAlchemy==2.0
 Flask-Uploads==0.1.3
 Flask-WTF==0.11
+futures==3.1.1
+gunicorn==19.1.1
+hashids==1.1.0
+honcho==0.6.6
+itsdangerous==0.24
 Jinja2==2.7.3
+kombu==3.0.37
+lxml==3.4.4
 Mako==1.0.0
 MarkupSafe==0.23
-SQLAlchemy==0.9.8
-SQLAlchemy-Searchable==0.7.0
-SQLAlchemy-Utils==0.27.10
-WTForms==2.0.1
-Werkzeug==0.9.6
-alembic==0.6.7
-amqp==1.4.6
-aniso8601==0.90
-anyjson==0.3.3
-argparse==1.2.1
-beautifulsoup4==4.3.2
-billiard==3.3.0.19
-blinker==1.3
-celery==3.1.17
-chardet==2.3.0
-click==3.3
-decorator==3.4.0
-gunicorn==19.1.1
-itsdangerous==0.24
-kombu==3.0.24
-lxml==3.4.4
+packaging==16.8
 passlib==1.6.2
 psycopg2==2.5.4
 py-bcrypt==0.4
 pyparsing==2.0.3
-pytz==2014.10
+python-dateutil==2.6.0
+pytz==2017.2
 raven==5.1.1
 readability-lxml==0.5
+redis==2.10.3
 requests==2.4.3
 selenium==2.44.0
 shortuuid==0.4.2
 six==1.8.0
+SQLAlchemy==0.9.8
+SQLAlchemy-Searchable==0.7.0
+SQLAlchemy-Utils==0.27.10
+trollius==2.0
+ujson==1.33
 urwid==1.3.0
 validators==0.7
 webargs==0.10.0
 webassets==0.10.1
-wsgiref==0.1.2
-honcho==0.6.6
-BeautifulSoup==3.2.1
-arrow==0.5.4
-ujson==1.33
-redis==2.10.3
-hashids==1.1.0
-trollius==2.0
+Werkzeug==0.9.6
+WTForms==2.0.1
