Squashed commit of the following:
commit 66750a6842e69bb0fd1b86163d6d09a2a58c225d
Author: Asad Dhamani <dhamaniasad@gmail.com>
Date:   Thu Dec 24 18:51:34 2020 +0530

    Persistent volumes for elasticsearch and redis

    Signed-off-by: Asad Dhamani <dhamaniasad@gmail.com>

commit 56872f729f3bb7a856b47e727bf96ae3ce25e897
Author: Asad Dhamani <dhamaniasad@gmail.com>
Date:   Thu Dec 24 17:56:23 2020 +0530

    Add volume for postgres

    Signed-off-by: Asad Dhamani <dhamaniasad@gmail.com>

commit 1887834c6cb9b31a6d586d8bd2a9a74af0692810
Author: Asad Dhamani <dhamaniasad@gmail.com>
Date:   Thu Dec 24 17:10:27 2020 +0530

    Memory usage limit for ES, fix migrate on startup

    Signed-off-by: Asad Dhamani <dhamaniasad@gmail.com>

commit 80e4a94392f94260f2949781c39983b318276af2
Author: Asad Dhamani <dhamaniasad@gmail.com>
Date:   Thu Dec 24 15:49:38 2020 +0530

    WIP setting up database connection

    Signed-off-by: Asad Dhamani <dhamaniasad@gmail.com>

commit 1c3fc32ef34cf2fdf6ee6e5bc7c9d6dd5a857dbe
Author: Asad Dhamani <dhamaniasad@gmail.com>
Date:   Thu Dec 24 14:58:09 2020 +0530

    Fix celery worker

    Signed-off-by: Asad Dhamani <dhamaniasad@gmail.com>

commit 8bc207b542c054f67aea5e36bb3adb4ac90dfabe
Author: Asad Dhamani <dhamaniasad@gmail.com>
Date:   Thu Dec 24 14:43:44 2020 +0530

    WIP worker in docker-compose

    Signed-off-by: Asad Dhamani <dhamaniasad@gmail.com>

commit ffc38e0a5f98f3af9182313f004f29d48a036d6f
Author: Asad Dhamani <dhamaniasad@gmail.com>
Date:   Tue Dec 22 21:31:37 2020 +0530

    Docker: Install dependencies to system Python

    Signed-off-by: Asad Dhamani <dhamaniasad@gmail.com>

commit 552fd30781e15503535e1b6a59894dac1b7e1e03
Author: Asad Dhamani <dhamaniasad@gmail.com>
Date:   Tue Dec 22 20:03:12 2020 +0530

    Add .dockerignore

    Signed-off-by: Asad Dhamani <dhamaniasad@gmail.com>

commit 23cc0689f923cf23fac20bd2c2ae185c2d81cfab
Author: Asad Dhamani <dhamaniasad@gmail.com>
Date:   Tue Dec 22 18:40:26 2020 +0530

    Ad

--- a/Pipfile
+++ b/Pipfile
@@ -39,6 +39,7 @@ email-validator = "*"
 python-dotenv = "*"
 flask-security-too = "*"
 elasticsearch-dsl = "<8.0.0,>=7.0.0"
+flask-script = "*"
 
 [dev-packages]
 pipdeptree = "*"
